# NGX-E

./: .gitignore  CMakeLists.txt  README.md  build.bat  dependencies.bat
NGXE/src/: NGXE.h  ngxepch.h
NGXE/src/NGXE/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.h
NGXE/src/NGXE/Events/: ApplicationEvent.h  Event.h
NGXE/src/Platform/: WindowsWindow.cpp  WindowsWindow.h
Projects/TestApp/: build.bat
Projects/TestApp/src/: TestApp.cpp
src/: NGEX.h  NGXE.h  Test.cpp  Test.h  ngxepch.h
src/NGEX/: Application.cpp  Application.h  Core.h
src/NGXE/: Application.cpp  Application.h  Core.h  EntryPoint.h  Logger.cpp  Logger.h
src/NGXE/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Platform/: WindowsWindow.cpp  WindowsWindow.h
